# golem-monitor-replicator

./: .gitignore  .gitjournal.toml  Cargo.toml  README.md  release.toml
scripts/: golem-monitor-replicator  monitor-rust.service
scripts/deb/: postinst  prerm
src/: export_csv.rs  list_nodes.rs  main.rs  pingme.rs  redis_tools.rs  stats_update.rs  stream_utils.rs  updater.rs
test/: login-f64.json  login-legacy.json  login-nvgpu.json  login-resource-float.json  login.json  provider-stats.json  requestor-stats.json  send_json.bash  stats.json
