[package]
name = "golem-monitor-rust"
version = "0.2.0"

[dependencies]
actix = "0.5"
actix-web = "0.6"
actix-redis = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json="1.0"
futures="0.1"
failure="0.1"
tokio-core="0.1"
redis-async = "0.0"

log = "0.4"
env_logger = "0.5"
config = "0.8"

url = "1.0"
bytes="0.4"
nom="3.2"

[features]
default = ["stats_update"]
pingme = []
stats_update = []

[profile.release]
lto = true
overflow-checks = true