[package]
name = "golem-monitor-rust"
version = "0.4.0"
license = "MIT"
publish=false
authors=["golemfactory"]

[dependencies]
actix = "0.5"
actix-web = "0.6"
actix-redis = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json="1.0"
futures="0.1"
failure="0.1"
tokio-core="0.1"
redis-async = "0.0"

log = "0.4"
env_logger = "0.5"
config = "0.8"

url = "1.0"
bytes="0.4"
nom="3.2"

[features]
default = ["stats_update"]
pingme = []
stats_update = []

[profile.release]
lto = true

[package.metadata.deb]
depends = "$auto, systemd"
assets = [
    ["target/release/golem-monitor-rust", "usr/sbin/", "755"],
    ["scripts/monitor-rust.service", "lib/systemd/system/", "644"],
    ["scripts/golem-monitor-replicator","etc/", "644"]
]
conf-files=["etc/golem-monitor-replicator"]
maintainer-scripts="scripts/deb"
