[package]
name = "golem-monitor-rust"
version = "0.5.0"
license = "MIT"
publish=false
authors=["golemfactory"]

[dependencies]
actix = "0.5"
actix-redis = "0.4"
actix-web = "0.6"
bytes="0.4"
config = "0.8"
csv = "1"
env_logger = "0.5"
failure="0.1"
futures="0.1"
log = "0.4"
nom="3.2"
redis-async = "0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json="1.0"
tokio-core="0.1"
url = "1.0"

[features]
default = ["stats_update", "list_nodes"]
pingme = []
stats_update = ['redis']
list_nodes = ['redis']
redis=[]
local-test=[]

[profile.release]
lto = true

[package.metadata.deb]
depends = "$auto, systemd"
assets = [
    ["target/release/golem-monitor-rust", "usr/sbin/", "755"],
    ["scripts/monitor-rust.service", "lib/systemd/system/", "644"],
    ["scripts/golem-monitor-replicator","etc/", "644"]
]
conf-files=["etc/golem-monitor-replicator"]
maintainer-scripts="scripts/deb"
